Fix theme reversion issue; Make title and sub-title CSS classes universal

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -58,7 +58,7 @@
             localStorage.setItem('theme', theme);
         };
 
-        setTheme(localStorage.getItem('theme') || 'code-magic');
+        setTheme(localStorage.getItem('theme') || 'yellow');
     </script>
 
     <script>
